fix: fix text overflow on contribute menu

--- a/web/src/components/layout/nav/contribute-menu/contribute-menu.css
+++ b/web/src/components/layout/nav/contribute-menu/contribute-menu.css
@@ -91,6 +91,12 @@
                 & .content {
                     display: flex;
                     align-items: center;
+
+                    & a {
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        width: 150px;
+                    }
                 }
 
                 & .list-items-wrapper {
